--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ html{
 body{
     font-size: 1.6rem;
     line-height: 1.5;
-    font-family:'Roboto Mono' monospace;
+    font-family: 'Roboto Mono', monospace;
 }
 
 h1 {
@@ -102,18 +102,21 @@ nav a{
     background-color: #DDB9A3;
     color: #fff;
     padding: 2.3%;
+    text-align: center;
+
 }
 .content div{
     width:30%;
     margin:0 auto;
 }
+
 .bold{
     font-weight: bold;
     text-decoration: none;
 }
 .img{
     background-image: url('assets/footer_img.jpg');
-    height:25vh;
+    height:27vh;
     background-repeat: no-repeat;
     background-size:cover;
     background-position: top center;
